@@ -1,3 +1,11 @@
+2007-10-23  Owen Taylor  <otaylor@redhat.com>
+
+	* jhbuild/frontends/gtkui.py: 
+	- Sort module list alphabetically
+	- Change scrollbar policies and text view wrap mode so that the
+	  window doesn't get forced wider and wider and wider as the
+	  build runs.
+
 2007-10-23  Frederic Peters  <fpeters@0d.be>
 
 	* jhbuild/utils/trayicon.py: don't call zenity for trayicon when there
